--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   sqflite: ^2.2.5
   path: ^1.9.0
   provider: ^6.0.3
+  uuid: ^4.0.0
+  url_launcher: ^6.2.4 # check pub.dev for latest
+
+
 
 
 
