--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.10.0
+  firebase_core: ^3.13.0
   firebase_auth: ^5.4.0
-  cloud_firestore: ^5.6.1
+  cloud_firestore: ^5.6.7
   flutter_gemini: ^3.0.0
   flutter_dotenv: ^5.2.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
