--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,18 +44,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_localization: ^0.3.1
   firebase_core: ^3.13.0
   firebase_auth: ^5.4.0
   cloud_firestore: ^5.6.7
   flutter_gemini: ^3.0.0
   flutter_dotenv: ^5.2.1
   shared_preferences: ^2.5.3
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.14.3
-  intl: ^0.20.2
+  intl: 0.19.0
 
 flutter_launcher_icons:
   android: "launcher_icons"
@@ -86,6 +88,8 @@ flutter:
    - assets/
    - assets/images/
    - .env
+   - assets/icons/
+   - assets/fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -98,10 +102,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+   - family: Nunito
+     fonts:
+       - asset: assets/fonts/Nunito-Black.ttf
+       - asset: assets/fonts/Nunito-Light.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
