--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,12 +52,12 @@ dependencies:
   flutter_dotenv: ^5.2.1
   shared_preferences: ^2.5.3
   google_fonts: ^6.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.14.3
-  intl: 0.19.0
 
 flutter_launcher_icons:
   android: "launcher_icons"
