--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,7 +11,8 @@ plugins {
 android {
     namespace = "com.example.flow_savvy"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = "25.1.8937393"
+//    ndkVersion = "25.1.8937393"
+    ndkVersion = "27.0.12077973"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_11
