--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   provider: ^6.0.3
   uuid: ^4.0.0
   url_launcher: ^6.2.4 # check pub.dev for latest
+  webview_flutter: ^4.4.2
+  webview_flutter_android: ^3.12.0
+  webview_flutter_wkwebview: ^3.9.0
 
 
 
