--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,21 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+
+    <!-- Add queries to allow URL launching -->
+    <queries>
+        <!-- If your application opens https URLs -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+        <!-- If your application opens http URLs -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="http" />
+        </intent>
+    </queries>
+
     <application
         android:label="PeriodReal"
         android:name="${applicationName}"
